--- a/Weeronline_Project/pom.xml
+++ b/Weeronline_Project/pom.xml
@@ -18,13 +18,43 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
   
+  
 
   <dependencies>
+  <dependency>
+    <groupId>net.bytebuddy</groupId>
+    <artifactId>byte-buddy-dep</artifactId>
+    <version>1.10.7</version>
+</dependency>
+  <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-exec</artifactId>
+    <version>1.3</version>
+</dependency>
+  
+  <dependency>
+    <groupId>com.squareup.okhttp3</groupId>
+    <artifactId>okhttp</artifactId>
+    <version>3.9.0</version>
+</dependency>
+<dependency>
+    <groupId>com.squareup.okio</groupId>
+    <artifactId>okio</artifactId>
+    <version>2.4.3</version>
+</dependency>
+  
+  <dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>28.2-jre</version>
+</dependency>
   
     <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
+    
+
     
 </dependency>
 
